Fix weird scrollbar issue

--- a/app/notes/Notes.module.css
+++ b/app/notes/Notes.module.css
@@ -21,14 +21,20 @@
   .note {
     height: auto;
     width: 200px;
-    max-height: 400px;
+    height: 200px;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: scroll;
     padding: 0.2rem 1rem;
     margin: 0.5rem;
     background: #ffff00;
     box-shadow: 4px 4px 8px 1px #00000075;
     border-radius: 2px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .note::-webkit-scrollbar {
+    display: none;
   }
   
   .container {
